styling select platform div

--- a/styles/css/edit-profile.css
+++ b/styles/css/edit-profile.css
@@ -116,8 +116,14 @@ main {
   margin-bottom: 0.9rem;
 }
 
+#schedule-title {
+  font-width: 600;
+  padding-top: 3rem;
+  padding-bottom: 2.1rem;
+}
+
 .schedule-date-hour {
-  background-color: yellow;
+  background-color: #EEEEEE;
   margin: 2rem 0 3.6rem 0;
   padding: 1.5rem 0.7rem;
   border-radius: 1rem;
@@ -132,6 +138,23 @@ main {
 }
 .schedule-date-hour .schedule-date {
   margin-bottom: 3.5rem;
+}
+
+.platforms {
+  text-align: center;
+  padding-bottom: 10rem;
+}
+.platforms h3 {
+  padding-bottom: 2.2rem;
+}
+.platforms .mentor-platforms {
+  padding-bottom: 4rem;
+}
+.platforms #confirm-button {
+  padding: 1.35rem 2.35rem;
+  border-radius: 1rem;
+  background-color: #EEEEEE;
+  border: none;
 }
 
 .footer {
