--- a/styles/sass/edit-profile.sass
+++ b/styles/sass/edit-profile.sass
@@ -108,8 +108,13 @@ main
          text-align: center
          margin-bottom: .9rem
 
+#schedule-title
+   font-width: 600
+   padding-top: 3rem
+   padding-bottom: 2.1rem
+
 .schedule-date-hour
-   background-color: yellow
+   background-color: #EEEEEE
    margin: 2rem 0 3.6rem 0
    padding: 1.5rem .7rem
    border-radius: 1rem
@@ -124,6 +129,22 @@ main
 
    .schedule-date
       margin-bottom: 3.5rem
+
+.platforms
+   text-align: center
+   padding-bottom: 10rem
+
+   h3
+      padding-bottom: 2.2rem
+
+   .mentor-platforms
+      padding-bottom: 4rem
+
+   #confirm-button
+      padding: 1.35rem 2.35rem
+      border-radius: 1rem
+      background-color:#EEEEEE
+      border: none
 
 
 .footer
