--- a/styles/css/edit-profile.css
+++ b/styles/css/edit-profile.css
@@ -5,10 +5,15 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
+  padding: 1.6rem;
 }
 
-main {
-  padding: 1.6rem;
+header {
+  padding-bottom: 10rem;
+}
+header .logo-header {
+  text-align: center;
+  align-items: center;
 }
 
 .form-profile {
@@ -77,10 +82,6 @@ main {
   padding-left: 1.6rem;
 }
 
-#mentor-panel {
-  margin-bottom: 10rem;
-}
-
 .interests-opened {
   width: 100%;
   border: 1px solid red;
@@ -98,11 +99,11 @@ main {
 .interests-opened .second-line {
   align-items: center;
   margin: 0 auto;
-  border: 1px solid green;
 }
 
 #button-plus {
   margin-top: 2.3rem;
+  width: 35%;
 }
 
 .mentor-panel-opened .planning-warning {
@@ -119,7 +120,6 @@ main {
 #schedule-title {
   font-width: 600;
   padding-top: 3rem;
-  padding-bottom: 2.1rem;
 }
 
 .schedule-date-hour {
