--- a/styles/sass/edit-profile.sass
+++ b/styles/sass/edit-profile.sass
@@ -4,9 +4,14 @@
 body
    font-family: 'Montserrat', sans-serif
    font-weight: 500
-
-main
    padding: 1.6rem
+
+header
+   padding-bottom: 10rem
+
+   .logo-header
+      text-align: center 
+      align-items: center
 
 .form-profile
    background-color: #E5E5E5
@@ -66,14 +71,14 @@ main
 .open-button
    background-color: #E5E5E5
    text-align: left
-   margin: 2.4rem 0
+   margin:2.4rem 0
    border-radius: 1rem
    padding-top: .9rem 
    padding-bottom: .9rem
    padding-left: 1.6rem
 
 #mentor-panel
-   margin-bottom: 10rem
+   //margin-bottom: 10rem
 
 .interests-opened
    width: 100%
@@ -92,10 +97,10 @@ main
    .second-line
       align-items: center
       margin: 0 auto
-      border: 1px solid green
 
 #button-plus
    margin-top: 2.3rem
+   width: 35%
 
 .mentor-panel-opened
    .planning-warning
@@ -111,7 +116,6 @@ main
 #schedule-title
    font-width: 600
    padding-top: 3rem
-   padding-bottom: 2.1rem
 
 .schedule-date-hour
    background-color: #EEEEEE
