--- a/styles/css/edit-profile.css
+++ b/styles/css/edit-profile.css
@@ -5,10 +5,14 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
+}
+
+main {
   padding: 1.6rem;
 }
 
 header {
+  padding: 1.6rem;
   padding-bottom: 10rem;
 }
 header .logo-header {
@@ -84,19 +88,24 @@ header .logo-header {
 
 .interests-opened {
   width: 100%;
-  border: 1px solid red;
   align-items: center;
   margin: 0 auto;
 }
-.interests-opened .opened-topic {
+
+.opened-topic {
   padding: 1rem;
-  width: 40%;
+  width: 168px;
   display: inline-block;
   border: 1px solid black;
   border-radius: 1rem;
   margin: 0 auto;
 }
-.interests-opened .second-line {
+
+.first-line {
+  margin: 0 auto;
+  margin-bottom: 1rem;
+}
+.first-line .second-line {
   align-items: center;
   margin: 0 auto;
 }
@@ -106,15 +115,29 @@ header .logo-header {
   width: 35%;
 }
 
+.calendar {
+  height: 300px;
+  padding-top: 2rem;
+  text-align: center;
+}
+
+.mentor-panel-opened .habilities-title {
+  padding-bottom: 2rem;
+}
 .mentor-panel-opened .planning-warning {
   background-color: #d1cfcf;
   padding: 2.5rem 5rem;
   border-radius: 1rem;
   height: 144px;
+  margin-top: 1.6rem;
 }
 .mentor-panel-opened .planning-warning-title {
   text-align: center;
   margin-bottom: 0.9rem;
+  font-width: 600;
+}
+.mentor-panel-opened .planning-warning-description {
+  font-width: 500;
 }
 
 #schedule-title {
@@ -158,6 +181,7 @@ header .logo-header {
 }
 
 .footer {
+  margin: 0;
   width: 100%;
   background-color: #b1aaaa;
   text-align: center;
