--- a/styles/sass/edit-profile.sass
+++ b/styles/sass/edit-profile.sass
@@ -4,11 +4,14 @@
 body
    font-family: 'Montserrat', sans-serif
    font-weight: 500
+
+main 
    padding: 1.6rem
 
 header
+   padding: 1.6rem
    padding-bottom: 10rem
-
+   
    .logo-header
       text-align: center 
       align-items: center
@@ -82,17 +85,20 @@ header
 
 .interests-opened
    width: 100%
-   border: 1px solid red
    align-items: center
    margin: 0 auto
    
-   .opened-topic
-      padding: 1rem
-      width: 40%
-      display: inline-block
-      border: 1px solid black
-      border-radius: 1rem
-      margin: 0 auto
+.opened-topic
+   padding: 1rem
+   width: 168px
+   display: inline-block
+   border: 1px solid black
+   border-radius: 1rem
+   margin: 0 auto
+
+.first-line
+   margin: 0 auto
+   margin-bottom: 1rem 
 
    .second-line
       align-items: center
@@ -102,16 +108,30 @@ header
    margin-top: 2.3rem
    width: 35%
 
+.calendar
+   height: 300px 
+   padding-top: 2rem
+   text-align: center
+
 .mentor-panel-opened
+
+   .habilities-title
+      padding-bottom: 2rem
+      
    .planning-warning
       background-color: #d1cfcf
       padding: 2.5rem 5rem
       border-radius: 1rem
       height: 144px
+      margin-top: 1.6rem
 
       &-title
          text-align: center
          margin-bottom: .9rem
+         font-width: 600
+
+      &-description
+         font-width: 500
 
 #schedule-title
    font-width: 600
@@ -152,6 +172,7 @@ header
 
 
 .footer
+   margin: 0
    width: 100%
    background-color: #b1aaaa
    text-align: center
