--- a/styles/css/mentorship-schedules.css
+++ b/styles/css/mentorship-schedules.css
@@ -34,9 +34,26 @@ DESKTOP
   justify-content: center;
   align-items: center;
 }
+
+circle.....
+
+.appointment-content-list {
+  height: 40px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
 */
 
 /* MOBILE */
+
+.body-main {
+  display: grid;
+  margin: 0;
+  padding: 0;
+}
+
 .mentorship-schedule-title {
   text-align: center;
 }
@@ -61,9 +78,13 @@ DESKTOP
 
 .legends {
   background-color: rgb(0, 255, 136);
+  max-width: 343px;
+  max-height: 248px;
+  height: auto;
+  width: auto;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -74,16 +95,78 @@ DESKTOP
 }
 
 .circle {
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   border-radius: 50%; 
   background-color: red;
 }
 
+/* Second line of first square with title and subtitles */
+.appointment-content-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-height: 248px;
+  height: auto;
+  width: auto;
+  background-color: black;
+}
+
+.appointment-list {
+  background-color: blueviolet;
+  height: auto;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.appointment-list-mentor-photo {
+  background-color: brown;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: auto;
+}
+
+.mentor-photo {
+  max-width: 100px;
+  max-height: 100px;
+  width: auto;
+  height: auto;
+  border-radius: 50%;
+}
+
+.date-hour {
+  height: auto;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  background-color: aqua;  
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cancel-send-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+
 /* Segundo quadrado do principal */
+/* Informações */
 .second-square-info-calend {
   background-color: rgb(0, 255, 64);
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
 }
+
+.information {
+  border: 0.1rem solid rgb(98, 99, 171);
+}
+
+/* Calendário */
