--- a/styles/css/mentorship-schedules.css
+++ b/styles/css/mentorship-schedules.css
@@ -1,52 +1,4 @@
-/*DESKTOP
-.mentorship-schedule-title {
-  text-align: left;
-}
-
-.main-first-larger-square {
-  border: 10px;
-  border-color: rgb(65, 14, 14);
-  background-color: aqua;
-  display: flex;
-  flex-direction: row;
-} 
-
-DESKTOP
-.second-square-info-calend {
-  border: 10px;
-  border-color: rgb(65, 14, 14);
-  background-color: rgb(0, 255, 64);
-  display: flex;
-  flex-direction: column;
-}
-
-.appointment-list-title-legend {
-  background-color: blue;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.legends {
-  background-color: rgb(0, 255, 136);
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-circle.....
-
-.appointment-content-list {
-  height: 40px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-
-*/
-
-/* MOBILE */
+/* ------------ MOBILE ------------ */
 
 .body-main {
   display: grid;
@@ -65,7 +17,7 @@ circle.....
 }
 
 .first-square-appointment {
-  background-color: rgb(8, 68, 68);
+  width: 100%;
 }
 
 /* First line of first square with title and subtitles */
@@ -74,6 +26,11 @@ circle.....
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+}
+
+.appointment-list-title-legend h3 {
+  margin: 0.7rem;
 }
 
 .legends {
@@ -92,6 +49,7 @@ circle.....
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: 0.5rem;
 }
 
 .circle {
@@ -99,6 +57,7 @@ circle.....
   height: 12px;
   border-radius: 50%; 
   background-color: red;
+  margin: 0 0.3rem 0 0;
 }
 
 /* Second line of first square with title and subtitles */
@@ -107,46 +66,48 @@ circle.....
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-height: 248px;
+  border-radius: 10px;
   height: auto;
   width: auto;
-  background-color: black;
-}
-
-.appointment-list {
-  background-color: blueviolet;
-  height: auto;
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: rgb(233, 214, 214);
 }
 
 .appointment-list-mentor-photo {
-  background-color: brown;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  text-align: center;
   height: auto;
 }
 
+.appointment-list-mentor-photo img {
+  margin: 1rem 1.5rem;
+}
+
+.appointment-list-mentor-photo h2, h4 {
+  margin-block: 0;
+  margin: 0 1.5rem;
+}
+
 .mentor-photo {
-  max-width: 100px;
-  max-height: 100px;
+  max-width: 115px;
+  max-height: 115px;
   width: auto;
   height: auto;
   border-radius: 50%;
 }
 
 .date-hour {
+  display: flex;
+  align-items: center;
   height: auto;
   width: auto;
-  display: flex;
-  flex-direction: row;
-  background-color: aqua;  
-  justify-content: space-between;
-  align-items: center;
+  display: inline-flex;
+}
+
+#date, #hour {
+  margin: 0.4rem 3rem 0.8rem 3rem;
+  font-size: 14px;
 }
 
 .cancel-send-buttons {
@@ -155,11 +116,24 @@ circle.....
   align-items: center;
 }
 
+.cancel-send-buttons #cancel-button, #send-button {
+  margin: 0.4rem 1.5rem 0.8rem 1.5rem;
+  font-size: 14px;
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+.cancel-send-buttons #cancel-button {
+  background-color: rgba(235, 87, 87, 1);
+}
+
+.cancel-send-buttons #send-button {
+  background: rgba(254, 85, 23, 1);
+}
 
 /* Segundo quadrado do principal */
 /* Informações */
 .second-square-info-calend {
-  background-color: rgb(0, 255, 64);
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
@@ -170,3 +144,72 @@ circle.....
 }
 
 /* Calendário */
+
+/*------------ DESKTOP ------------*/
+
+@media (min-width: 650px) {
+  .body-main {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    background-color: blue;
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+  }
+
+  .mentorship-schedule-title {
+    text-align: left;
+  }
+  
+  .main-first-larger-square {
+    border-radius: 10px;
+    background-color: aqua;
+    width: 70%;
+    
+    display: flex;
+    flex-direction: row;
+  } 
+
+  .first-square-appointment {
+    border-radius: 10px;
+    width: 180%;
+    height: 100vh;
+  }
+ 
+  .second-square-info-calend {
+    border: 10px;
+    border-color: rgb(65, 14, 14);
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .appointment-list-title-legend {
+    background-color: blue;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  .legends {
+    background-color: rgb(0, 255, 136);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  /*circle.....*/
+
+  .appointment-content-list {
+    height: 18%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .appointment-list-mentor-photo {
+    
+  }
+}
