--- a/styles/css/style-index.css
+++ b/styles/css/style-index.css
@@ -3,6 +3,8 @@ body {
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
 
 .grid-main {
@@ -59,10 +61,9 @@ body {
 }
 .grid-main .main .mentors-card {
   width: 100%;
-  max-width: 300px;
+  max-width: 462px;
   height: 440px;
   margin: 16px;
-  background-color: #eee;
   border-radius: 0.6rem;
   box-sizing: border-box;
   box-shadow: 2px 2px 5px;
@@ -71,7 +72,6 @@ body {
   flex-direction: column;
 }
 .grid-main .main .mentors-card-name {
-  font-size: 20px;
   margin-top: 0.5rem;
   margin-bottom: 0.7rem;
 }
@@ -114,7 +114,7 @@ body {
   box-shadow: 1px 1px 3px;
 }
 .grid-main .main .mentors-card-btn {
-  background-color: #000;
+  background-color: #FE5517;
   width: 9.7rem;
   height: 2.8rem;
   border-radius: 10px;
