--- a/styles/sass/style-index.sass
+++ b/styles/sass/style-index.sass
@@ -1,11 +1,14 @@
 @use 'mixins'
 @use 'responsive-mixin'
+@use 'colors'
 
 /* MOBILE */
 body
     margin: 0 auto
     padding: 0
     box-sizing: border-box
+    font-family: 'Montserrat', sans-serif
+    font-weight: 500
    
 .grid-main 
     width: 100%
@@ -65,10 +68,9 @@ body
 
             &-card 
                 width: 100%
-                max-width: 300px
+                max-width: 462px
                 height: 440px
                 margin: 16px
-                background-color: #eee
                 border-radius: .6rem
                 box-sizing: border-box
                 box-shadow: 2px 2px 5px
@@ -79,9 +81,8 @@ body
                 flex-direction: column
 
                 &-name
-                    font-size: 20px
                     margin-top: .5rem
-                    margin-bottom: .7rem
+                    margin-bottom: .7rem 
                 
                 h4
                     margin-bottom: .3rem
@@ -112,7 +113,7 @@ body
                         display: flex
                         flex-flow: row wrap
                     
-                    &-specialty h4  
+                    &-specialty h4   
                         display: block
                         padding: .5rem
                         background-color: #bbb
@@ -121,7 +122,7 @@ body
                         box-shadow: 1px 1px 3px 
                 
                 &-btn
-                    background-color: #000
+                    background-color: colors.$primary
                     width: 9.7rem
                     height: 2.8rem
                     border-radius: 10px
