coloring the page

--- a/styles/css/edit-profile.css
+++ b/styles/css/edit-profile.css
@@ -5,6 +5,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
+  color: #0F0E45;
 }
 
 main {
@@ -21,7 +22,7 @@ header .logo-header {
 }
 
 .form-profile {
-  background-color: #E5E5E5;
+  background-color: #F1F1FF;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -71,13 +72,13 @@ header .logo-header {
   border-radius: 1rem;
   margin: 2.2rem auto 2rem auto;
   padding: 1rem 3.4rem;
-  background-color: #5B5B5B;
+  background-color: #FE5517;
   color: white;
-  border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
 }
 
 .open-button {
-  background-color: #E5E5E5;
+  background-color: #36357E;
+  color: white;
   text-align: left;
   margin: 2.4rem 0;
   border-radius: 1rem;
@@ -96,9 +97,10 @@ header .logo-header {
   padding: 1rem;
   width: 168px;
   display: inline-block;
-  border: 1px solid black;
+  border: 1px solid #FE5517;
   border-radius: 1rem;
   margin: 0 auto;
+  color: #0F0E45;
 }
 
 .first-line {
@@ -125,7 +127,8 @@ header .logo-header {
   padding-bottom: 2rem;
 }
 .mentor-panel-opened .planning-warning {
-  background-color: #d1cfcf;
+  background-color: #F1F1FF;
+  color: #0F0E45;
   padding: 2.5rem 5rem;
   border-radius: 1rem;
   height: 144px;
@@ -146,7 +149,7 @@ header .logo-header {
 }
 
 .schedule-date-hour {
-  background-color: #EEEEEE;
+  background-color: #F1F1FF;
   margin: 2rem 0 3.6rem 0;
   padding: 1.5rem 0.7rem;
   border-radius: 1rem;
@@ -176,20 +179,21 @@ header .logo-header {
 .platforms #confirm-button {
   padding: 1.35rem 2.35rem;
   border-radius: 1rem;
-  background-color: #EEEEEE;
+  background-color: #E0E0E0;
+  color: #828282;
   border: none;
 }
 
 .footer {
   margin: 0;
   width: 100%;
-  background-color: #b1aaaa;
+  background-color: #FE5517;
   text-align: center;
   padding-top: 0.6rem;
   padding-bottom: 0.6rem;
 }
 .footer #top-page {
-  color: black;
+  color: white;
 }
 
 /*# sourceMappingURL=edit-profile.css.map */
