--- a/styles/sass/mentor-profile.sass
+++ b/styles/sass/mentor-profile.sass
@@ -45,7 +45,7 @@ section
 
 
 .mentor-profile
-   background-color: #F0EDED
+   background-color: colors.$secondary-7
    padding: 7.7rem 3.8rem 4.2rem 3.8rem
    border-radius: 1rem
    box-sizing: border-box
