--- a/styles/sass/edit-profile.sass
+++ b/styles/sass/edit-profile.sass
@@ -1,9 +1,12 @@
+@use 'colors'   
+   
 * 
    box-sizing: border-box
 
 body
    font-family: 'Montserrat', sans-serif
    font-weight: 500
+   color: colors.$black-blue
 
 main 
    padding: 1.6rem
@@ -17,7 +20,7 @@ header
       align-items: center
 
 .form-profile
-   background-color: #E5E5E5
+   background-color: colors.$secondary-7
    display: flex
    flex-direction: column
    justify-content: center
@@ -67,12 +70,12 @@ header
       border-radius: 1rem
       margin: 2.2rem auto 2rem auto
       padding: 1rem 3.4rem
-      background-color: #5B5B5B
+      background-color: colors.$primary
       color: white
-      border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133))
 
 .open-button
-   background-color: #E5E5E5
+   background-color: colors.$secondary
+   color: white
    text-align: left
    margin:2.4rem 0
    border-radius: 1rem
@@ -92,9 +95,10 @@ header
    padding: 1rem
    width: 168px
    display: inline-block
-   border: 1px solid black
+   border: 1px solid colors.$primary
    border-radius: 1rem
    margin: 0 auto
+   color: colors.$black-blue
 
 .first-line
    margin: 0 auto
@@ -119,7 +123,8 @@ header
       padding-bottom: 2rem
       
    .planning-warning
-      background-color: #d1cfcf
+      background-color: colors.$secondary-7
+      color: colors.$black-blue
       padding: 2.5rem 5rem
       border-radius: 1rem
       height: 144px
@@ -138,7 +143,7 @@ header
    padding-top: 3rem
 
 .schedule-date-hour
-   background-color: #EEEEEE
+   background-color: colors.$secondary-7
    margin: 2rem 0 3.6rem 0
    padding: 1.5rem .7rem
    border-radius: 1rem
@@ -167,20 +172,21 @@ header
    #confirm-button
       padding: 1.35rem 2.35rem
       border-radius: 1rem
-      background-color:#EEEEEE
+      background-color: colors.$gray-5
+      color: colors.$gray-3
       border: none
 
 
 .footer
    margin: 0
    width: 100%
-   background-color: #b1aaaa
+   background-color: colors.$primary
    text-align: center
    padding-top: .6rem
    padding-bottom: .6rem
    
    #top-page
-      color: black
+      color: white
 
 
       
