--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -2,43 +2,38 @@
 //MENU LATERAL E PERFIL DO USUÁRIO
 
 
-.menu
+#menu
     width: auto
     height: auto
-    z-index: 10 
+    z-index: 10
+
+    
+
 
     // BOTÃO DO MOBILE
-    #nav-btn
-        width: 7rem
-        height: 7rem
+    .navBtn
+        width: 5rem
+        height: 5rem
         position: absolute
         left: 6vw
-        
-        display: flex
-        flex-direction: column
-        align-items: left
-        justify-content: center
+        z-index: 11
+        margin-top: 1rem
 
-        span
-            width: 32px
-            height: 4px
-            background-color: black
-            margin: 8px
-        
-        .line1, .line3
-            width: 50px
-            margin-left: 4px
+        background-image: url('../../assets/icons/aside-mobile-icon.svg')
+        background-repeat: no-repeat center center
+        background-size: 100% 
+
 
         @include responsive-mixin.desktop
             display: none
 
-    #nav-menu
+    .nav-menu
         display: block
         width: 70vw
         background-color: #ccc
         box-sizing: border-box
-        margin-top: 0
-        margin-left: -70vw
+        transform: translateX(-100%)
+        transition: transform 0.4s ease-in
 
         display: flex
         flex-direction: column
@@ -79,7 +74,9 @@
                     text-decoration: none
 
 
-                    // ELEMENTOS DOS MENU
+        &_open
+            transform: translateX(0)
+
     
 
         @include responsive-mixin.desktop
@@ -90,6 +87,7 @@
             flex-direction: column
             align-items: center
             height: 100%
+            transform: translateX(0%)
 
             transition-duration:1s
             transform-origin: 0% 0% 
@@ -138,51 +136,52 @@
                 #nav-item-out-line
                     margin-top: 15vh
                                                 // AÇÃO AO PASSAR O MOUSE
-    #nav-menu:hover
-        display: block
-        transition: all .5s ease-out
+            &:hover
+                display: block
+                transition: all .5s ease-out
 
-        @include responsive-mixin.desktop
-            width: 100%
-               
-                // INFORMAÇÕES DO USUÁRIO
-            .profile
-                align-items: center
-                img
-                    width: 8rem
-
-                &-info
-                    display: block
-                    text-align: center
-
-                    a
-                        color: black
-                        margin-top: 1rem
+                @include responsive-mixin.desktop
+                    width: 100%
                     
-                             //NAVEGADOR DAS PÁGINAS (MENU)
+                        // INFORMAÇÕES DO USUÁRIO
+                    .profile
+                        align-items: center
+                        img
+                            width: 8rem
 
-            .nav
-                height: 50vh
-                box-sizing: border-box 
+                        &-info
+                            display: block
+                            text-align: center
 
-                a
-                    display: block
-                    text-decoration: none
+                            a
+                                color: black
+                                margin-top: 1rem
+                            
+                                    //NAVEGADOR DAS PÁGINAS (MENU)
 
-                    h4
-                        display: block
+                    .nav
+                        height: 50vh
+                        box-sizing: border-box 
 
-                &-item
-                    text-align: center
+                        a
+                            display: block
+                            text-decoration: none
 
-                    h4
-                        margin-top: 1rem
+                            h4
+                                display: block
 
-                #nav-item-out-line
-                    margin-top: 9vh
+                        &-item
+                            text-align: center
 
-    .nav-menu-active
-        transform: translateX(0)
+                            img
+                                width: 50%
+                                height: auto
+
+                            h4
+                                margin-top: 1rem
+
+                        #nav-item-out-line
+                            margin-top: 9vh
         
 
                 
