--- a/styles/sass/style-index.sass
+++ b/styles/sass/style-index.sass
@@ -40,7 +40,7 @@ body
             width: 100%
 
     
-    .menu
+    #menu
         position: absolute
         top: 0
 
@@ -157,13 +157,3 @@ body
                 &-header
                     border: 1px solid black
                     height: 3rem
-
-
-
-                
-
-            
-
-            
-
-    
