--- a/styles/css/style-aside.css
+++ b/styles/css/style-aside.css
@@ -1,44 +1,35 @@
-.menu {
+#menu {
   width: auto;
   height: auto;
   z-index: 10;
 }
-.menu #nav-btn {
-  width: 7rem;
-  height: 7rem;
+#menu .navBtn {
+  width: 5rem;
+  height: 5rem;
   position: absolute;
   left: 6vw;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  justify-content: center;
-}
-.menu #nav-btn span {
-  width: 32px;
-  height: 4px;
-  background-color: black;
-  margin: 8px;
-}
-.menu #nav-btn .line1, .menu #nav-btn .line3 {
-  width: 50px;
-  margin-left: 4px;
+  z-index: 11;
+  margin-top: 1rem;
+  background-image: url("../../assets/icons/aside-mobile-icon.svg");
+  background-repeat: no-repeat center center;
+  background-size: 100%;
 }
 @media (min-width: 920px) {
-  .menu #nav-btn {
+  #menu .navBtn {
     display: none;
   }
 }
-.menu #nav-menu {
+#menu .nav-menu {
   display: block;
   width: 70vw;
   background-color: #ccc;
   box-sizing: border-box;
-  margin-top: 0;
-  margin-left: -70vw;
+  transform: translateX(-100%);
+  transition: transform 0.4s ease-in;
   display: flex;
   flex-direction: column;
 }
-.menu #nav-menu .profile {
+#menu .nav-menu .profile {
   width: 100%;
   height: 20vh;
   box-sizing: border-box;
@@ -46,13 +37,13 @@
   flex-direction: column;
   align-items: center;
 }
-.menu #nav-menu .profile img {
+#menu .nav-menu .profile img {
   border-radius: 50%;
   width: 5rem;
   height: auto;
   margin: 2rem 0.3rem;
 }
-.menu #nav-menu .nav {
+#menu .nav-menu .nav {
   width: 80%;
   height: 50vh;
   margin: 0 auto;
@@ -60,17 +51,20 @@
   flex-direction: column;
   align-items: center;
 }
-.menu #nav-menu .nav-item {
+#menu .nav-menu .nav-item {
   text-align: center;
   margin-top: 1.5rem;
 }
-.menu #nav-menu .nav-item a {
+#menu .nav-menu .nav-item a {
   display: block;
   padding: 0.5rem;
   text-decoration: none;
 }
+#menu .nav-menu_open {
+  transform: translateX(0);
+}
 @media (min-width: 920px) {
-  .menu #nav-menu {
+  #menu .nav-menu {
     display: block;
     width: 40%;
     background-color: #ccc;
@@ -78,10 +72,11 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
+    transform: translateX(0%);
     transition-duration: 1s;
     transform-origin: 0% 0%;
   }
-  .menu #nav-menu .profile {
+  #menu .nav-menu .profile {
     width: 100%;
     height: 15vh;
     box-sizing: border-box;
@@ -89,16 +84,16 @@
     flex-direction: column;
     align-items: center;
   }
-  .menu #nav-menu .profile img {
+  #menu .nav-menu .profile img {
     border-radius: 50%;
     width: 4.5rem;
     height: auto;
     margin: 2rem 0.3rem;
   }
-  .menu #nav-menu .profile-info {
+  #menu .nav-menu .profile-info {
     display: none;
   }
-  .menu #nav-menu .nav {
+  #menu .nav-menu .nav {
     width: 80%;
     height: 50vh;
     margin-top: 10vh;
@@ -107,66 +102,67 @@
     align-items: center;
     justify-content: flex-start;
   }
-  .menu #nav-menu .nav-item {
+  #menu .nav-menu .nav-item {
     margin: 2rem auto;
   }
-  .menu #nav-menu .nav-item a {
+  #menu .nav-menu .nav-item a {
     display: block;
     padding: 0.5rem;
     text-decoration: none;
   }
-  .menu #nav-menu .nav-item a h4 {
+  #menu .nav-menu .nav-item a h4 {
     display: none;
   }
-  .menu #nav-menu .nav #nav-item-out-line {
+  #menu .nav-menu .nav #nav-item-out-line {
     margin-top: 15vh;
   }
+  #menu .nav-menu:hover {
+    display: block;
+    transition: all 0.5s ease-out;
+  }
 }
-.menu #nav-menu:hover {
-  display: block;
-  transition: all 0.5s ease-out;
-}
-@media (min-width: 920px) {
-  .menu #nav-menu:hover {
+@media (min-width: 920px) and (min-width: 920px) {
+  #menu .nav-menu:hover {
     width: 100%;
   }
-  .menu #nav-menu:hover .profile {
+  #menu .nav-menu:hover .profile {
     align-items: center;
   }
-  .menu #nav-menu:hover .profile img {
+  #menu .nav-menu:hover .profile img {
     width: 8rem;
   }
-  .menu #nav-menu:hover .profile-info {
+  #menu .nav-menu:hover .profile-info {
     display: block;
     text-align: center;
   }
-  .menu #nav-menu:hover .profile-info a {
+  #menu .nav-menu:hover .profile-info a {
     color: black;
     margin-top: 1rem;
   }
-  .menu #nav-menu:hover .nav {
+  #menu .nav-menu:hover .nav {
     height: 50vh;
     box-sizing: border-box;
   }
-  .menu #nav-menu:hover .nav a {
+  #menu .nav-menu:hover .nav a {
     display: block;
     text-decoration: none;
   }
-  .menu #nav-menu:hover .nav a h4 {
+  #menu .nav-menu:hover .nav a h4 {
     display: block;
   }
-  .menu #nav-menu:hover .nav-item {
+  #menu .nav-menu:hover .nav-item {
     text-align: center;
   }
-  .menu #nav-menu:hover .nav-item h4 {
+  #menu .nav-menu:hover .nav-item img {
+    width: 50%;
+    height: auto;
+  }
+  #menu .nav-menu:hover .nav-item h4 {
     margin-top: 1rem;
   }
-  .menu #nav-menu:hover .nav #nav-item-out-line {
+  #menu .nav-menu:hover .nav #nav-item-out-line {
     margin-top: 9vh;
   }
-}
-.menu .nav-menu-active {
-  transform: translateX(0);
 }
 
 /*# sourceMappingURL=style-aside.css.map */
