--- a/styles/css/style-index.css
+++ b/styles/css/style-index.css
@@ -36,12 +36,12 @@ body {
 .grid-main .research-search {
   width: 100%;
 }
-.grid-main .menu {
+.grid-main #menu {
   position: absolute;
   top: 0;
 }
 @media (min-width: 920px) {
-  .grid-main .menu {
+  .grid-main #menu {
     position: relative;
     grid-column: 1/2;
     grid-row: 1/3;
