--- a/styles/css/mentorship-schedules.css
+++ b/styles/css/mentorship-schedules.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 /* ------------ MOBILE ------------ */
 
 .body-main {
@@ -148,68 +153,29 @@
 /*------------ DESKTOP ------------*/
 
 @media (min-width: 650px) {
+  body {
+  display: grid;
+  background-color: wheat;
+  width: 100vw;
+  }
+
   .body-main {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    background-color: blue;
-    display: flex;
-    flex-direction: column;
-    
-    align-items: center;
+  width: 80%;
+  height: 100%;
+  background-color: blue;
   }
 
   .mentorship-schedule-title {
     text-align: left;
   }
-  
+
   .main-first-larger-square {
     border-radius: 10px;
     background-color: aqua;
-    width: 70%;
+    width: 80vw;
     
     display: flex;
     flex-direction: row;
   } 
 
-  .first-square-appointment {
-    border-radius: 10px;
-    width: 180%;
-    height: 100vh;
-  }
- 
-  .second-square-info-calend {
-    border: 10px;
-    border-color: rgb(65, 14, 14);
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .appointment-list-title-legend {
-    background-color: blue;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-  .legends {
-    background-color: rgb(0, 255, 136);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  /*circle.....*/
-
-  .appointment-content-list {
-    height: 18%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-
-  .appointment-list-mentor-photo {
-    
-  }
 }
