--- a/styles/css/mentorship-schedules.css
+++ b/styles/css/mentorship-schedules.css
@@ -1,4 +1,4 @@
-body {
+* {
     margin: 0;
     padding: 0;
 }
@@ -153,29 +153,37 @@ body {
 /*------------ DESKTOP ------------*/
 
 @media (min-width: 650px) {
-  body {
-  display: grid;
-  background-color: wheat;
-  width: 100vw;
-  }
-
   .body-main {
+  display: grid;
+  grid-template-columns: 12.8% auto;
+  grid-template-rows: auto auto;
+  grid-gap: 1rem;
   width: 80%;
   height: 100%;
-  background-color: blue;
   }
 
-  .mentorship-schedule-title {
-    text-align: left;
+  #menu {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+
+  
+  .container-main {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    background-color: brown;
   }
 
   .main-first-larger-square {
-    border-radius: 10px;
-    background-color: aqua;
-    width: 80vw;
-    
-    display: flex;
-    flex-direction: row;
-  } 
+    max-width: 1434px;
+    max-height: 787px;
+ 
+  }
+
+  .title {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
 
 }
