--- a/styles/css/racunho.css
+++ b/styles/css/racunho.css
@@ -119,58 +119,16 @@ border: 0.1rem solid rgb(98, 99, 171);
 
 
 
-<!-- ASIDE MENU -->
 
-<aside class="menu">
+.mentorship-schedule-title {
+  text-align: left;
+}
 
-<!-- BUTTON USED ON MOBILE -->
-<div id="nav-btn">
-  <img src="./assets/icons/aside-mobile-icon.svg" alt="">
-</div>
-
-<div id="nav-menu">
-  <!-- PROFILE USER -->
-  <div class="profile">
-    <div class="profile-image">
-      <img src="./assets/img/perfil mulher.jpg" alt="">
-    </div>
-
-    <div class="profile-info">
-      <h3>Cristina Martins</h3>
-      <h2> <a href="#">Editar perfil</a></h2>
-    </div>
-  </div>
-
-  <!-- NAV -->
-  <nav class="nav">
-
-    <!-- MENU ITEMS -->
-    <div class="nav-item">
-      <a href="#">
-        <img src="./assets/icons/home-page-icon.svg" alt="">
-        <h4>Página Inicial</h4>
-      </a>
-    </div>
-
-    <div class="nav-item">
-      <a href="#">
-        <img src="./assets/icons/schedule-icon.svg" alt="">
-        <h4>Meus agendamentos</h4>
-      </a>
-    </div>
-
-    <div class="nav-item">
-      <a href="#">
-        <img src="./assets/icons/profile-icon.svg" alt="">
-        <h4>Perfil</h4>
-      </a>
-    </div>
-
-    <div class="nav-item" id="nav-item-out-line">
-      <a href="#">
-        <img src="./assets/icons/out-line-icon.svg" alt="">
-        <h4>Sair</h4>
-      </a>
-    </div>
-  </nav>
-</div>
+.main-first-larger-square {
+  border-radius: 10px;
+  background-color: aqua;
+  width: 80vw;
+  
+  display: flex;
+  flex-direction: row;
+} 
