--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -71,13 +71,7 @@
                 a
                     display: block
                     padding: .5rem
-                    text-decoration: none
-
-
-        &_open
-            transform: translateX(0)
-
-    
+                    text-decoration: none    
 
         @include responsive-mixin.desktop
             display: block
@@ -182,6 +176,7 @@
 
                         #nav-item-out-line
                             margin-top: 9vh
-        
+    &-open
+        transform: translateX(0)    
 
                 
