--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -98,9 +98,10 @@
 
                 img
                     border-radius: 50%
-                    width: 4.5rem
+                    width: 3rem
                     height: auto
                     margin: 2rem .3rem
+                    transition: width .4s
 
                 &-info 
                     display: none
@@ -109,7 +110,7 @@
             .nav
                 width: 80%
                 height: 50vh
-                margin-top: 10vh
+                margin-top: 15vh
                 
                 display: flex
                 flex-direction: column
@@ -176,7 +177,7 @@
 
                         #nav-item-out-line
                             margin-top: 9vh
-    &-open
-        transform: translateX(0)    
+        &-open
+            transform: translateX(0)    
 
                 
