--- a/styles/css/style-index.css
+++ b/styles/css/style-index.css
@@ -12,7 +12,7 @@ body {
   .grid-main {
     padding: 0;
     display: grid;
-    grid-template-columns: 12.8% auto;
+    grid-template-columns: 12.8% 78.8%;
     grid-template-rows: auto auto;
     grid-gap: 1rem;
   }
@@ -21,7 +21,7 @@ body {
   border: 1px solid blue;
   width: 100%;
   height: 11rem;
-  width: 100%;
+  width: 1005;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,6 +35,35 @@ body {
 }
 .grid-main .research-search {
   width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.grid-main .research-search-filter {
+  display: flex;
+  width: 77.5%;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+.grid-main .research-search-filter-input {
+  width: 20rem;
+}
+.grid-main .research .logo {
+  width: 100%;
+  height: 50%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.grid-main .research .logo-img {
+  background-image: url("../../assets/icons/logo.svg");
+  background-repeat: no-repeat center center;
+  width: 261px;
+  height: 75px;
 }
 .grid-main #menu {
   position: absolute;
@@ -50,6 +79,7 @@ body {
 .grid-main .main {
   width: 100%;
   height: auto;
+  margin-right: 8.4%;
 }
 .grid-main .main .mentors {
   height: auto;
@@ -94,6 +124,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: 24rem;
+  background-size: cover;
   box-sizing: border-box;
   overflow: hidden;
 }
