--- a/styles/sass/style-index.sass
+++ b/styles/sass/style-index.sass
@@ -15,7 +15,7 @@ body
         
         display: grid
 
-        grid-template-columns: 12.8% auto
+        grid-template-columns: 12.8% 78.8%
         grid-template-rows: auto auto
         grid-gap: 1rem
 
@@ -23,7 +23,7 @@ body
         border: 1px solid blue
         width: 100%
         height: 11rem
-        width: 100%
+        width: 1005
         
         display: flex
         flex-direction: column
@@ -38,6 +38,36 @@ body
         
         &-search
             width: 100%
+            height: 50%
+
+            display: flex
+            flex-direction: row
+            align-items: center
+            justify-content: space-between
+
+            &-filter
+                display: flex
+                width: 77.5%
+                height: 100%
+                justify-content: space-between
+                align-items: center
+
+                &-input
+                    width: 20rem
+        
+        .logo 
+            width: 100%
+            height: 50%
+            box-sizing: border-box
+
+            display: flex
+            justify-content: center
+            align-items: center
+            &-img
+                background-image: url('../../assets/icons/logo.svg')
+                background-repeat: no-repeat center center
+                width: 261px
+                height: 75px
 
     
     #menu
@@ -55,6 +85,7 @@ body
     .main
         width: 100%
         height: auto
+        margin-right: 8.4%
     
         .mentors
             height: auto
@@ -101,6 +132,7 @@ body
                     background-position: center
                     background-repeat: no-repeat
                     background-size: 24rem
+                    background-size: cover
                     box-sizing: border-box
                     overflow: hidden
                 
