--- a/styles/css/style-index.css
+++ b/styles/css/style-index.css
@@ -18,17 +18,15 @@ body {
   }
 }
 .grid-main .research {
-  border: 1px solid blue;
   width: 100%;
   height: 11rem;
-  width: 1005;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 @media (min-width: 920px) {
   .grid-main .research {
-    border: 1px solid blue;
     grid-column: 2/3;
     grid-rows: 1/2;
   }
@@ -41,6 +39,11 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+.grid-main .research-search-select {
+  border: 2px solid #36357E;
+  border-radius: 10px;
+  height: 50px;
+}
 .grid-main .research-search-filter {
   display: flex;
   width: 77.5%;
@@ -50,6 +53,17 @@ body {
 }
 .grid-main .research-search-filter-input {
   width: 20rem;
+  border: 2px solid #36357E;
+  border-radius: 10px;
+  height: 50px;
+}
+.grid-main .research-search-filter button {
+  height: 50px;
+  color: white;
+  width: 9.7rem;
+  background-color: #FE5517;
+  margin: 2.2rem auto;
+  border-radius: 10px;
 }
 .grid-main .research .logo {
   width: 100%;
@@ -102,11 +116,10 @@ body {
 }
 .grid-main .main .mentors-card-name {
   font-size: 20px;
-  margin-top: 0.5rem;
-  margin-bottom: 0.7rem;
+  margin: 0.5rem 0 0.7rem 0.7rem;
 }
 .grid-main .main .mentors-card h4 {
-  margin-bottom: 0.3rem;
+  margin: 0 0 0.7rem 0.7rem;
 }
 @media (min-width: 920px) {
   .grid-main .main .mentors-card {
@@ -122,8 +135,7 @@ body {
   border-radius: 0.6rem 0.6rem 0 0;
   background-image: url("/assets/img/perfil mulher.jpg");
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: 24rem;
+  background-repeat: no-repeat center center;
   background-size: cover;
   box-sizing: border-box;
   overflow: hidden;
@@ -138,28 +150,26 @@ body {
 }
 .grid-main .main .mentors-card-description-specialty h4 {
   display: block;
-  padding: 0.5rem;
-  background-color: #bbb;
-  margin: 0.5rem;
+  border: 2px solid #36357E;
   border-radius: 0.5rem;
+  margin: 0.5rem;
   box-shadow: 1px 1px 3px;
+  padding: 0.5rem;
 }
 .grid-main .main .mentors-card-btn {
-  background-color: #000;
-  width: 9.7rem;
-  height: 2.8rem;
-  border-radius: 10px;
+  height: 50px;
   color: white;
+  width: 9.7rem;
+  background-color: #FE5517;
   margin: 2.2rem auto;
+  border-radius: 10px;
 }
 @media (min-width: 920px) {
   .grid-main .research {
-    border: 1px solid blue;
     grid-column: 2/3;
     grid-rows: 1/2;
   }
   .grid-main .main {
-    border: 1px solid red;
     height: auto;
     grid-column: 2/3;
     grid-row: 2/3;
@@ -172,7 +182,6 @@ body {
     flex-wrap: wrap;
   }
   .grid-main .main .mentors-header {
-    border: 1px solid black;
     height: 3rem;
   }
 }
