--- a/styles/sass/edit-profile.sass
+++ b/styles/sass/edit-profile.sass
@@ -15,17 +15,22 @@ main
 header
    padding: 1.6rem
    padding-bottom: 10rem
+   width: 100vw
+   display: flex
+   align-items: center
+
    
 #logo-mobile
    margin: 0 auto
-   text-align: center 
-   padding-bottom: 2rem
-   margin-bottom: 10rem
    align-items: center
 
-   .logo-header
-      text-align: center 
-      align-items: center
+#logo-menu-mobile
+   @include responsive-mixin.desktop
+      display: none
+
+.header-logo
+   padding-bottom: 3rem
+   padding-top: 1rem
 
 .form-profile
    background-color: colors.$secondary-7
