--- a/styles/sass/style-index.sass
+++ b/styles/sass/style-index.sass
@@ -62,7 +62,14 @@ body
                 
                 button
                     @include mixins.primStyle
-
+                    margin: 0
+        #sjmentor
+            margin: 0
+            border: 2px solid colors.$primary
+            width: 9.7rem 
+            height: 50px
+            border-radius: 10px
+            background-color: transparent
         
         .logo 
             width: 100%
