--- a/styles/css/style-index.css
+++ b/styles/css/style-index.css
@@ -56,6 +56,7 @@ body {
   border: 2px solid #36357E;
   border-radius: 10px;
   height: 50px;
+  margin-left: 2%;
 }
 .grid-main .research-search-filter button {
   height: 50px;
@@ -64,6 +65,15 @@ body {
   background-color: #FE5517;
   margin: 2.2rem auto;
   border-radius: 10px;
+  margin: 0;
+}
+.grid-main .research #sjmentor {
+  margin: 0;
+  border: 2px solid #FE5517;
+  width: 9.7rem;
+  height: 50px;
+  border-radius: 10px;
+  background-color: transparent;
 }
 .grid-main .research .logo {
   width: 100%;
