--- a/styles/sass/edit-profile.sass
+++ b/styles/sass/edit-profile.sass
@@ -150,9 +150,16 @@ header
    @include responsive-mixin.mobile
       width: 130px
 
-#button-plus
+.button-plus
    margin-top: 2.3rem
    width: 35%
+   display: inline
+
+   h4
+      display: inline
+
+   .add-icon
+      width: 2rem
 
 .calendar
    height: 300px 
