--- a/styles/sass/edit-profile.sass
+++ b/styles/sass/edit-profile.sass
@@ -17,12 +17,10 @@ header
    padding-bottom: 10rem
    width: 100vw
    display: flex
-   align-items: center
 
    
 #logo-mobile
    margin: 0 auto
-   align-items: center
 
 #logo-menu-mobile
    @include responsive-mixin.desktop
@@ -31,6 +29,8 @@ header
 .header-logo
    padding-bottom: 3rem
    padding-top: 1rem
+   text-align: center
+   align-items: center
 
 .form-profile
    background-color: colors.$secondary-7
@@ -282,3 +282,9 @@ header
 
 button::hover
    cursor: pointer
+
+// GRID ORGANIZATION 
+
+.container-grid
+   display: grid
+   grid-template-columns: 10% 90%
